# delivery-window-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SYSTEM_SPECIFICATION.md  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
delivery_hours_service/: architecture.md  main.py
delivery_hours_service/application/ports/: courier_service.py  venue_service.py
delivery_hours_service/application/use_cases/: get_venue_delivery_hours.py
delivery_hours_service/common/: config.py  logging.py  middleware.py  resilience.py
delivery_hours_service/domain/exceptions/: base.py  time_exceptions.py
delivery_hours_service/domain/models/: delivery_result.py  delivery_window.py  time.py
delivery_hours_service/infrastructure/: cache.py
delivery_hours_service/infrastructure/adapters/: courier_service.py  venue_service.py
delivery_hours_service/infrastructure/clients/: http_client.py
delivery_hours_service/infrastructure/converters/: time_windows_converter.py
delivery_hours_service/interface/: app.py
delivery_hours_service/interface/api/: delivery_hours_api.py  dependencies.py  health.py
delivery_hours_service/interface/schemas/: response.py
docs/: API_EXAMPLES.md
external-services-mock/: stub.json
tests/: test_delivery_hours_endpoint.py
tests/integration/: test_delivery_hours_edge_cases.py  test_delivery_hours_endpoint.py
tests/unit/application/use_cases/: test_get_venue_delivery_hours.py
tests/unit/common/: test_config.py  test_logging.py  test_middleware.py  test_resilience.py
tests/unit/interface/: test_app.py
(+12 files in other folders)
